--- a/CallorieCrusher/CallorieCrusher.csproj
+++ b/CallorieCrusher/CallorieCrusher.csproj
@@ -140,9 +140,14 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="burger.jpg" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\burger.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="фон2.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.8.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.8.0\build\MaterialDesignThemes.targets')" />
